--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".MyteamActivity"></activity>
+        <activity android:name=".MyteamActivity"/>
     </application>
 
 </manifest>
